# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import usersRouter from "./users";
 import tasksRouter from "./tasks";
 import leaderboardRouter from "./leaderboard";
 import adminRouter from "./admin";
+import withdrawalsRouter from "./withdrawals";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(usersRouter);
 router.use(tasksRouter);
 router.use(leaderboardRouter);
 router.use(adminRouter);
+router.use(withdrawalsRouter);
 
 export default router;
